--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,239 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: GT America Burrow;
+  src:
+    url('../../public/fonts/GT-America-Burrow.0f7547ea.woff2') format('woff2'),
+    url('../../public/fonts/GT-America-Burrow.63192351.woff') format('woff');
+  font-display: swap;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: Neuzeit S LT W01 Book;
+  src:
+    url('../../public/fonts/d741af6b-26f4-4e34-b55d-432ccade3280.0bf253a2.woff2')
+      format('woff2'),
+    url('../../public/fonts/77aaeb7b-86f4-47a1-8196-74a660dd0919.8eb5f4e6.woff')
+      format('woff'),
+    url('../../public/fonts/be8d3917-a4cf-4d8f-b767-4e84bcbe300c.01c8eaea.svg')
+      format('svg');
+  font-display: swap;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: NeuzeitSLTW01-BookHeavy;
+  font-display: swap;
+  src:
+    url('../../public/fonts/3da0a3e3-3dff-405c-a0b2-0b0050b21771.687f0c23.woff2')
+      format('woff2'),
+    url('../../public/fonts/a1476bae-b118-4e9d-b711-c84091d9bc16.905ef34d.woff')
+      format('woff'),
+    url('../../public/fonts/74a8e701-bffc-464e-a60b-63169debd492.aad1ba7b.svg')
+      format('svg');
+}
+
+@font-face {
+  font-family: ui-icons;
+  src:
+    url('../../public/fonts/ui-icons.00c19c55.woff') format('woff'),
+    url('../../public/fonts/ui-icons.d1318c86.svg') format('svg');
+  font-weight: 400;
+  font-style: normal;
+  font-display: block;
+}
+
+body,
+html {
+  scroll-behavior: smooth !important;
+  color: #383633;
+  font-size: 1rem;
+  font-family: Neuzeit S LT W01 Book;
+  text-align: left;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.link {
+  color: #383633;
+  text-decoration: none;
+  transition: all 0.25s;
+}
+
+.link:hover {
+  color: #8b2735;
+  cursor: pointer;
+}
+
+.font-primary {
+  font-family: GT America Burrow;
+}
+
+.font-secondary {
+  font-family: Neuzeit S LT W01 Book;
+}
+
+.font-secondary-heavy {
+  font-family: NeuzeitSLTW01-BookHeavy;
+}
+
+.icon {
+  font-family: ui-icons !important;
+  font-style: normal;
+  font-weight: 400;
+  font-feature-settings: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+
+.icon-logo:before {
+  content: '';
+}
+
+.icon-search:before {
+  color: #383633;
+  content: '';
+  display: inline-block;
+}
+
+.icon-user:before {
+  content: '';
+}
+
+.icon-cart:before {
+  content: '';
+}
+
+.button {
+  transition: all 0.25s;
+  font-size: 0.6875rem;
+  line-height: 1rem;
+  font-family: GT America Burrow;
+  color: #fff;
+  background: #383633;
+  border-radius: 0.125rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  width: 100%;
+  padding: 0.875rem 0;
+  min-width: 15.625rem;
+  letter-spacing: 1px;
+}
+
+@media (min-width: 640px) {
+  .button {
+    letter-spacing: 0.5px;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .button {
+    font-size: 0.875rem;
+    letter-spacing: 0.7px;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .button {
+    padding: 0.75rem 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .button {
+    padding: 0.8125rem 2rem;
+  }
+}
+
+.button:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
+.button:disabled:hover {
+  opacity: 0.65;
+}
+
+@media (min-width: 640px) {
+  .button {
+    font-size: 0.875rem;
+    letter-spacing: 1.2px;
+    min-width: 12.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .button {
+    min-width: 15.625rem;
+    padding: 1.1875rem 0;
+  }
+
+  .form-fancy__submit .button {
+    padding: 1.1875rem 1rem;
+  }
+}
+
+.btn {
+  transition: all 0.25s;
+  font-size: 0.6875rem;
+  line-height: 1rem;
+  font-family: GT America Burrow;
+  padding: 0.75em 2rem;
+  color: #fff;
+  background: #383633;
+  border-radius: 0.125rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .btn {
+    letter-spacing: 0.5px;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .btn {
+    font-size: 0.875rem;
+    letter-spacing: 0.7px;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .btn {
+    padding: 0.75rem 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .btn {
+    padding: 0.8125rem 2rem;
+  }
+}
+
+.btn:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
+.btn:disabled:hover {
+  opacity: 0.65;
 }
